{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 14,
  "lineage": "3d41dc60-8928-722c-5fd4-ff6071f66d03",
  "resources": [
    {
      "module": "module.igw-np",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:internet-gateway/igw-06944aaa162cb20fe",
            "id": "igw-06944aaa162cb20fe",
            "owner_id": "551242489466",
            "tags": {
              "Env": "pr",
              "Name": "igw-pr-aps1-mum-01"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "igw-pr-aps1-mum-01"
            },
            "vpc_id": "vpc-07555889ab9662817"
          },
          "dependencies": [
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.igw-np",
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06944aaa162cb20fe",
            "id": "r-rtb-0b2e6dcab3d812ea71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2e6dcab3d812ea7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw-np.aws_internet_gateway.gw",
            "module.rtb-pub.aws_route_table.example",
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnet-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9962de9dbfc23b4",
            "route_table_id": "rtb-07dd2625caea4c66c",
            "subnet_id": "subnet-0991bd37fd7a18db4"
          },
          "dependencies": [
            "module.private-subnet-1.aws_subnet.main",
            "module.rtb-pri.aws_route_table.example",
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnet-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:subnet/subnet-0991bd37fd7a18db4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.100.101.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0991bd37fd7a18db4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551242489466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "pr",
              "Name": "sub-private-pr-aps1-mum-01"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "sub-private-pr-aps1-mum-01"
            },
            "vpc_id": "vpc-07555889ab9662817"
          },
          "dependencies": [
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnet-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001975f78ed119041",
            "route_table_id": "rtb-07dd2625caea4c66c",
            "subnet_id": "subnet-084ce1e0bd59b5f89"
          },
          "dependencies": [
            "module.private-subnet-2.aws_subnet.main",
            "module.rtb-pri.aws_route_table.example",
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnet-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:subnet/subnet-084ce1e0bd59b5f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.100.101.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084ce1e0bd59b5f89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551242489466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "pr",
              "Name": "sub-private-pr-aps1-mum-02"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "sub-private-pr-aps1-mum-02"
            },
            "vpc_id": "vpc-07555889ab9662817"
          },
          "dependencies": [
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041c060dce7b5f908",
            "route_table_id": "rtb-0b2e6dcab3d812ea7",
            "subnet_id": "subnet-0daf7f4390dbcfb7a"
          },
          "dependencies": [
            "module.public-subnet-1.aws_subnet.main",
            "module.rtb-pub.aws_route_table.example",
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:subnet/subnet-0daf7f4390dbcfb7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.100.100.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daf7f4390dbcfb7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551242489466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "pr",
              "Name": "sub-public-pr-aps1-mum-01"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "sub-public-pr-aps1-mum-01"
            },
            "vpc_id": "vpc-07555889ab9662817"
          },
          "dependencies": [
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5aa2e15f6b96d50",
            "route_table_id": "rtb-0b2e6dcab3d812ea7",
            "subnet_id": "subnet-0fa95f7a58f70a901"
          },
          "dependencies": [
            "module.public-subnet-2.aws_subnet.main",
            "module.rtb-pub.aws_route_table.example",
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:subnet/subnet-0fa95f7a58f70a901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.100.100.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa95f7a58f70a901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551242489466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "pr",
              "Name": "sub-public-pr-aps1-mum-02"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "sub-public-pr-aps1-mum-02"
            },
            "vpc_id": "vpc-07555889ab9662817"
          },
          "dependencies": [
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-pri",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:route-table/rtb-07dd2625caea4c66c",
            "id": "rtb-07dd2625caea4c66c",
            "owner_id": "551242489466",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "pr",
              "Name": "rtb-private-pr-aps1-mum-01"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "rtb-private-pr-aps1-mum-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07555889ab9662817"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-pub",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:route-table/rtb-0b2e6dcab3d812ea7",
            "id": "rtb-0b2e6dcab3d812ea7",
            "owner_id": "551242489466",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "pr",
              "Name": "rtb-public-pr-aps1-mum-01"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "rtb-public-pr-aps1-mum-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07555889ab9662817"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-np.aws_vpc.vpc-mum"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-np",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-mum",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:vpc/vpc-07555889ab9662817",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.100.0/23",
            "default_network_acl_id": "acl-0a6ccdb244c58a4a1",
            "default_route_table_id": "rtb-0ab29fc221d693b1a",
            "default_security_group_id": "sg-0b096dea529a9b40a",
            "dhcp_options_id": "dopt-01bec9ec62326e75e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07555889ab9662817",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab29fc221d693b1a",
            "owner_id": "551242489466",
            "tags": {
              "Env": "pr",
              "Name": "vpc-pr-aps1-mum-01"
            },
            "tags_all": {
              "Env": "pr",
              "Name": "vpc-pr-aps1-mum-01"
            }
          }
        }
      ]
    }
  ]
}